@@ -1,3 +1,8 @@
+2012-04-03  Jakub Jelinek  <jakub@redhat.com>
+
+	PR tree-optimization/52835
+	* gfortran.dg/pr52835.f90: New test.
+
 2012-04-03  Eric Botcazou  <ebotcazou@adacore.com>
 
 	* gnat.dg/specs/aggr5.ads: New test.
